--- a/src/app/hotel/hotel.component.css
+++ b/src/app/hotel/hotel.component.css
@@ -17,6 +17,11 @@
     border-radius: 0px;
 }
 
+.card.card-sm.filtro {
+    width: 95%;
+    margin-top: 5px;
+}
+
 .card.card-sm.ng-untouched.ng-pristine.ng-valid {
     width: 95%;
     margin-top: 5px;
