--- a/src/app/hotel/hotel.component.css
+++ b/src/app/hotel/hotel.component.css
@@ -1,3 +1,10 @@
+h4.card-title.titulo-hotels {
+    color: #157ab1;
+    font-weight: 600;
+    text-transform: capitalize;
+    font-size: 19px;
+}
+
 .ver-hotel {
     font-size: 15px;
     width: 100%;
@@ -13,6 +20,7 @@
 
 .list-group-item.titulo-filtro {
     font-size: 15px !important;
+    color: #157ab1;
 }
 
 .img-header {
