--- a/src/app/hotel/hotel.component.html
+++ b/src/app/hotel/hotel.component.html
@@ -25,14 +25,14 @@
         <div class="col-sm-3 filtros ">
             <div class="card " style="width: 95%; ">
                 <ul class="list-group list-group-flush ">
-                    <li class="list-group-item "><strong>Filtros</strong></li>
+                    <li class="list-group-item"><strong>Filtros</strong></li>
 
                 </ul>
             </div>
 
             <div class="card card-sm filtro ">
                 <ul class="list-group list-group-flush ">
-                    <li class="list-group-item titulo-filtro"><i class="fa fa-search text-body "></i><strong> Nombre del Hotel</strong></li>
+                    <li class="list-group-item titulo-filtro"><i class="fa fa-search text-body" style="color: #157ab1 !important;"></i><strong> Nombre del Hotel</strong></li>
 
                 </ul>
                 <div class="card-body row no-gutters align-items-center ">
@@ -51,21 +51,21 @@
         <div class="col-sm-9 lista ">
             <div class="card " style="border: solid 1px #ccc; padding: 10px; margin-bottom:15px; background:#fff; " *ngFor='let hotel of hotels | hotelFiltro:listFilter'>
                 <div class="row ">
-                    <div class="col-md-4 ">
+                    <div class="col-md-5 ">
                         <img [src]=" 'assets/images/hotels/' + hotel.image " class="w-100 ">
                     </div>
                     <div class="col-md-4 px-3 ">
                         <div class="card-block px-3 ">
-                            <h4 class="card-title ">{{hotel.name}}</h4>
-                            <p class="card-text "> <i class="fa fa-star " style="color:#df6800; " *ngFor="let c of hotel.stars; let x=index "></i></p>
+                            <h4 class="card-title titulo-hotels">{{hotel.name}}</h4>
+                            <p class="card-text "> <i class="fa fa-star " style="color:#fdba12; " *ngFor="let c of hotel.stars; let x=index "></i></p>
                             <img class="rounded " [src]=" 'assets/icons/amenities/' + hotel.amenities[j] + '.svg' " *ngFor="let item of hotel.amenities; let j=index " style="width: 25px; height: 25px; padding-right:7px; ">
                         </div>
                     </div>
-                    <div class="col-md-3 " style="padding:20px; ">
+                    <div class="col-md-3 " style="padding-top:20px; ">
                         <p class="texto " style="color:#000; text-align:center; font-size:14px; ">Precio por noche por habitación</p>
                         <h4 class="price " style="color:#df6800; text-align:center; ">ARS {{hotel.price}}</h4>
                         <div class="text-center ">
-                            <a href="# " class="btn btn-primary active ver-hotel ">Ver Hotel</a>
+                            <a href="# " class="btn btn-primary active ver-hotel ">Ver hotel</a>
                             <button class="btn btn-danger active borrar-hotel" (click)="delete(hotel)"><span class="fa fa-trash "></span> Borrar hotel</button>
                         </div>
                     </div>
