--- a/src/app/hotel/hotel.component.html
+++ b/src/app/hotel/hotel.component.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="col-md-3 " style="padding-top:20px; ">
                         <p class="texto " style="color:#000; text-align:center; font-size:14px; ">Precio por noche por habitación</p>
-                        <h4 class="price " style="color:#df6800; text-align:center; ">ARS {{hotel.price}}</h4>
+                        <h4 class="price " style="color:#df6800; text-align:center; font-weight:600;"> <strong style="font-size:18px; font-weight: 300;"> ARS</strong> {{hotel.price}}</h4>
                         <div class="text-center ">
                             <a href="# " class="btn btn-primary active ver-hotel ">Ver hotel</a>
                             <button class="btn btn-danger active borrar-hotel" (click)="delete(hotel)"><span class="fa fa-trash "></span> Borrar hotel</button>
