--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,14 @@
 
 body {
     background: #f4f4f4 !important;
+    font-family: Lato, sans-serif !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: Lato, sans-serif !important;
 }
