unos arreglos en los estilos

--- a/src/app/hotel/hotel.component.css
+++ b/src/app/hotel/hotel.component.css
@@ -59,7 +59,7 @@ h4.card-title.titulo-hotels {
 }
 
 .col-md-4.medio {
-    padding: 0px !important;
+    padding-left: 10px !important;
     margin: 0px !important;
 }
 
