--- a/src/app/hotel-detalle/hotel-detalle.component.html
+++ b/src/app/hotel-detalle/hotel-detalle.component.html
@@ -2,9 +2,17 @@
     <div class="card mb-3" style="margin-top:20px; border-radius:0.0rem !important;">
         <img class="card-img-top" style="max-width: 100%; height: 400px; border-radius:0.0rem !important;" [src]=" 'assets/images/hotels/' + hotels.hotel.image ">
         <div class="card-body">
-            <h5 class="card-title">{{hotels.hotel.name}}</h5>
-            <p class="card-text"><i class="fa fa-star " *ngFor="let c of intToArray(hotels.hotel.stars)"></i></p>
-            <p class="card-text"><small class="text-muted">ARS {{hotels.hotel.price}}</small></p>
+            <h3 class="card-title" style="float:left; padding-right:15px;">{{hotels.hotel.name}}</h3> <i class="fa fa-star " style="margin-top:9px;" *ngFor="let c of intToArray(hotels.hotel.stars)"></i>
+            <br>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent convallis eros sed dictum blandit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec tristique posuere justo, a consectetur libero.
+                Pellentesque ornare iaculis facilisis. Pellentesque tincidunt efficitur purus id dapibus. Mauris felis lacus, venenatis in malesuada ut, egestas eget lacus. Quisque non mattis sapien, vitae lobortis ex. </p>
+            <p>Aenean iaculis diam ac placerat porta. In dapibus urna nec facilisis lacinia. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce convallis elit eu lacinia finibus. Morbi consectetur turpis eu ligula
+                vestibulum, non pulvinar felis eleifend. Ut dolor odio, ullamcorper id ex nec, pulvinar euismod diam. Phasellus molestie libero eget nibh aliquet malesuada. Vestibulum gravida, purus eu tincidunt auctor, mauris tortor bibendum magna, a
+                pellentesque enim sapien bibendum risus. </p>
+            <br>
+            <h4 class="card-text"><small class="text-muted">ARS </small> {{hotels.hotel.price}}</h4>
+            <a routerLink="/hoteles" type="button" class="btn btn-danger">Volver a lista Hoteles</a>
         </div>
     </div>
 </div>
